# coinsage-api

./: .gitignore  .pre-commit-config.yaml  Makefile  Procfile  alembic.ini  pyproject.toml  requirements.txt
coin_tracker/: config.py  database.py  dependencies.py  main.py  models.py  security.py
coin_tracker/exchanges/: binance_api.py
coin_tracker/importer/: binance.py  daemon.py
coin_tracker/routes/: auth.py  portfolios.py  transactions.py
coin_tracker/schemas/: auth.py  portfolios.py  transactions.py
coinsage/: config.py  constants.py  database.py  dependencies.py  security.py
coinsage/exchanges/: binance_api.py
coinsage/importer/: binance.py  daemon.py
coinsage/routes/: auth.py  exchanges.py  portfolios.py  transactions.py
coinsage/schemas/: exchanges.py
migrations/: env.py
migrations/versions/: ef9297c5afd2_initial.py
tests/: conftest.py  test_auth.py  test_exchanges.py  test_portfolios.py  test_transactions.py
